Changes after the project review

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h1 {
   padding-top: 5em;
   padding-bottom: 3em;
   max-width: 100%;
-  background-color: #412D61;
+  background-color: #412d61;
   color: white;
 }
 
